--- a/build.gradle
+++ b/build.gradle
@@ -34,16 +34,6 @@ dependencies {
     testImplementation 'io.qameta.allure:allure-selenide:2.19.0'
     testImplementation 'mysql:mysql-connector-java:8.0.30'
 
-//    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.0'
-//    testImplementation 'com.codeborne:selenide:5.19.0'
-//    testImplementation 'org.postgresql:postgresql:42.4.1'
-//    implementation 'com.github.javafaker:javafaker:1.0.2'
-//    testImplementation 'commons-dbutils:commons-dbutils:1.7'
-//    testImplementation 'io.rest-assured:rest-assured:4.3.0'
-//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
-//    testImplementation 'org.slf4j:slf4j-simple:1.7.32'
-//    testImplementation 'io.qameta.allure:allure-selenide:2.16.1'
-//    testImplementation 'mysql:mysql-connector-java:5.1.6'
 }
 
 test {
@@ -51,10 +41,10 @@ test {
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
     systemProperty 'db.url', System.getProperty('db.url')
 
-//    Для работы БД mysql по умолчанию необходимо добавить адрес БД следующим образом
-    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3307/app')
-//    Для работы БД postgresql по умолчанию необходимо добавить адрес БД следующим образом
-//    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:postgresql://localhost:5432/app')
+    //Для работы БД mysql по умолчанию необходимо добавить адрес БД следующим образом
+    // systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3307/app')
+    //Для работы БД postgresql по умолчанию необходимо добавить адрес БД следующим образом
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:postgresql://localhost:5431/app')
 
     systemProperty 'db.user', System.getProperty('db.user', 'app')
     systemProperty 'db.password', System.getProperty('db.password', 'pass')
