--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
-    systemProperty 'dbUrl', System.getProperty('dbUrl')
-    systemProperty 'dbUser', System.getProperty('dbUser')
-    systemProperty 'dbPass', System.getProperty('dbPass')
+    // systemProperty 'db.url', System.getProperty('db.url', 'jdbc:postgresql://localhost:5432/app') //для запуска Postgres
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app') // для запуска MySQL
+    systemProperty 'dbUser', System.getProperty('db.user')
+    systemProperty 'dbPass', System.getProperty('db.password')
 }
